@@ -5,11 +5,12 @@ Moqui Framework Release Notes
 Release 1.3.1 - Date TBD
 ===========================================================================
 
-Moqui Framework 1.3.1 is TODO
+Moqui Framework 1.3.1 is a minor new feature and bug fix release. TODO
 
 New Features:
 
-- TODO
+- form-list and section-iterate now automatically add _index and _has_next
+  context fields following the pattern used in Freemarker
 
 Bug Fixes:
 
